<resources>
    <string name="app_name">RoadAssistant</string>
    <string name="hello_user">Hello User</string>
    <string name="search_elements">Search elements</string>

    <string name="user_regestration">User Regestration</string>
    <string name="admin_login">Admin Login</string>
    <string name="business_ownner_login">Business_ownner Login</string>
    <string name="user_login">User Login</string>
    <string name="help_desk">Help Desk</string>
    <string name="request_a_service">Request a service</string>
    <string name="home">Home</string>
    <string name="favourite">Favourite</string>
    <string name="account">Account</string>
    <string name="settings">Settings</string>
    <string name="business_login">Business Login</string>
    <string name="request_for_nearby_garage">Request for nearby garage</string>
    <string name="enter_your_details">Enter your details</string>
    <string name="enter_your_name">Enter your Name</string>
    <string name="enter_your_vehicle_type">Enter your vehicle type</string>
    <string name="enter_your_location">Enter Your Location</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="vehicle_number">vehicle Number</string>
    <string name="email">Email</string>
    <string name="phone_no">Phone No</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="user_id">User ID</string>
    <string name="password1">Password</string>
    <string name="shop_name">Shop Name</string>
    <string name="contact_number">Contact Number</string>
    <string name="business_id">Business ID</string>
    <string name="password2">Password</string>
    <string name="login">Login</string>
    <string name="business_login1">Business Login</string>
    <string name="business_registration2">Business Registration</string>
    <string name="shop_name1">Shop Name</string>
    <string name="location">Location</string>
    <string name="contact_number1">Contact Number</string>
    <string name="business_id1">Business ID</string>
    <string name="password3">Password</string>
    <string name="confirm_password1">Confirm Password</string>
    <string name="register">Register</string>


</resources>