<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/backgroundv"
    tools:context=".BusinessRegistrationActivity">

    <EditText
        android:id="@+id/shopNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/shop_name1"
        android:inputType="text"
        android:layout_marginBottom="8dp" />

    <EditText
        android:id="@+id/locationEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/location"
        android:inputType="text"
        android:layout_marginBottom="8dp" />

    <EditText
        android:id="@+id/contactNoEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/contact_number1"
        android:inputType="phone"
        android:layout_marginBottom="8dp" />

    <EditText
        android:id="@+id/businessIdEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/business_id1"
        android:inputType="text"
        android:layout_marginBottom="8dp" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password3"
        android:inputType="textPassword"
        android:layout_marginBottom="8dp" />

    <EditText
        android:id="@+id/confirmPasswordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password1"
        android:inputType="textPassword"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register" />

</LinearLayout>
