<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/backgroundv"
    tools:context=".BusinessLoginActivity">

    <EditText
        android:id="@+id/shopNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/shop_name"
        android:inputType="text"
        android:layout_marginBottom="8dp" />

    <EditText
        android:id="@+id/contactNoEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/contact_number"
        android:inputType="phone"
        android:layout_marginBottom="8dp" />

    <EditText
        android:id="@+id/businessIdEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/business_id"
        android:inputType="text"
        android:layout_marginBottom="8dp" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password2"
        android:inputType="textPassword"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login" />

</LinearLayout>
